<resources>
    <string name="app_name">AlphaDo PET</string>
    <string name="permission_agree">Permission agree</string>
    <string name="permission_argee_msg">You can use the app only if you agree to access it.</string>
    <string name="data_receive">Data reception</string>
    <string name="btn_reg">Register</string>
    <string name="btn_modify">Modify</string>
    <string name="btn_send">Send</string>
    <string name="btn_login">Login</string>
    <string name="btn_confirm">Check</string>
    <string name="app_finish">Do you want to exit the app?</string>
    <string name="join_ok">Registration is complete</string>
    <string name="delete">delete</string>
    <string name="pet_reg_number">A registration number</string>
    <string name="pet_birth_day">date of birth:</string>
    <string name="test_history">Test detail</string>
    <string name="test_count">th</string>
    <string name="test_result_normal">Normal</string>
    <string name="test_result_doubt">Doubt</string>
    <string name="test_result_alert">Alert</string>
    <string name="no_test_history">There are no test details.</string>
    <string name="use_urine_test">Please use after urine test.</string>
    <string name="urine_test">Urine test</string>
    <string name="no_reg_pet">There is no registered pet.</string>
    <string name="use_reg_pet">Please use after register the pet.</string>
    <string name="pet_info">Pet Info</string>
    <string name="tab_menu">Menu</string>
    <string name="tab_result">Results</string>
    <string name="tab_check">Test</string>
    <string name="tab_modify">Modify</string>
    <string name="tab_home">Home</string>
    <string name="refresh">Restart the application.</string>
    <string name="test_result">Test result</string>
    <string name="test_item1">Occult Blood</string>
    <string name="test_item2">Bilirubin</string>
    <string name="test_item3">Urovilleinogen</string>
    <string name="test_item4">Ketone</string>
    <string name="test_item5">Protein</string>
    <string name="test_item6">Nitrite</string>
    <string name="test_item7">Glucose</string>
    <string name="test_item8">pH</string>
    <string name="test_item9">Specific Gravity</string>
    <string name="test_item10">Leukocytes</string>
    <string name="description_item">Item description</string>
    <string name="suspected_disease">Doubt disease</string>
    <string name="description_item1">What is Occcult boold(Occult Blood) ?</string>
    <string name="description_item2">What is Bilirubin(Bilirubin) ?</string>
    <string name="description_item3">What is Urobilinogen(Urobilinogen) ?</string>
    <string name="description_item4">What is Ketone(Ketone) ?</string>
    <string name="description_item5">)What is Protein(Protein) ?</string>
    <string name="description_item6">What is Nitrite(Nitrite) ?</string>
    <string name="description_item7">What is Glucose(Glucose) ?</string>
    <string name="description_item8">What is pH(PH) ?</string>
    <string name="description_item9">What is Specific gravity(Specific Gravity) ?</string>
    <string name="description_item10">What is Leukocytes(Leukocytes) ?</string>
    <string name="nagative">Nagative</string>
    <string name="positive">Positive</string>
    <string name="very_small_amount">Small</string>
    <string name="one_month">1 Month</string>
    <string name="three_month">3 month</string>
    <string name="six_month">6 month</string>
    <string name="one_year">Year</string>
    <string name="all">All</string>
    <string name="dialog_select_number">Please select the test number of times.</string>
    <string name="item0">Blood refers to the presence of a small amount of blood in a pet"'s urine and is determined by measuring the amount of hemoglobin and myoglobin in urine. Mainly if there is an abnormality in the urinary system (e.g. kidney, urethra, bladder, urethra, etc.), it will be shown as positive. Healthy pets may also experience a temporary positive test.</string>
    <string name="item1">Bilirubin is a metabolite of hemoglobin, a component of red blood cells, and should have a negative reaction in the pet"'s urine. In dogs (especially males), minor positive reactions are common even under normal conditions, but in cats, careful attention is also needed.</string>
    <string name="item2">Urovillinogens are formed in the process of dissolving hemoglobin, and intestinal bacteria convert bilirubin into ureobilinogens. A small amount may be detected in healthy pets, but if a large amount is detected, it may be possible to suspect haemolytic or malignant anemia.</string>
    <string name="item3">Keatonin is an metabolite of fatty acids produced by the decomposition of the lipid, and is produced by increased in vivo fat decomposition if insulin or carbohydrate intake is insufficient. Only small amounts should be detected in healthy pets.</string>
    <string name="item4">A small amount of protein can be detected (proteinurized) in the urine of healthy pets, but a large amount of protein can be found in both kidney and non-renatal diseases.</string>
    <string name="item5">Nitrates absorbed through food are decomposed into nitrates by infected bacteria and are detected in the urine of pets. Small amounts can also be detected in healthy pets.</string>
    <string name="item6">포Glucose is an important source of energy and while healthy pets should all be absorbed by the body, trace amounts can be detected after over-consumption of sugary food.</string>
    <string name="item7">pH indicates the degree of acidity and alkaline in urine and is determined by the kidney"'s ability to control the concentration of hydrogen ions and bicarbonates in the blood. If your pet eats a lot of high-protein meat, it becomes acidic; if you eat a lot of vegetables, it becomes alkaline.</string>
    <string name="item8">Weight indicates urine concentration based on water density and is a useful indicator of dilution and enrichment of the kidneys. Urine is dark in the case of high and low in the case of low in the case.</string>
    <string name="item9">White blood cells are one of the cells that make up the blood, which is responsible for the immunity of pets through the action of bacteria. Mainly with urinary tract infection, white blood cells in the body increase and can be detected in urine.</string>
    <string name="item01">nephritis, Urinary tract infection, Urinary stone, Cystitis</string>
    <string name="item11">Hepatitis, Cirrhosis, Hemolytic disease, Biliary obstruction</string>
    <string name="item21">Biliary atresia, Liver disease, Hemolytic anemia, Jaundice</string>
    <string name="item31">Diabetes, Ketoacidosis, Malnutrition</string>
    <string name="item41">Kidney disease, Urinary tract infection, Cystitis, Glomerulonephritis</string>
    <string name="item51">Urinary tract infection, Cystitis, Pyelonephritis</string>
    <string name="item61">Diabetes, Stress hyperglycemia, Internal secretion/Digestive diseases</string>
    <string name="item71">Acidemia, Diabetes,Kidney disease, Alkalosis, Urinary tract infection</string>
    <string name="item81">Kidney disease, Urinary disease, Diabetes</string>
    <string name="item91">Urinary tract infection, Prostateitis, Urinary disease</string>
    <string name="reg_pet">Register Pet</string>
    <string name="modify_pet">Pet modification</string>
    <string name="pet_name">Name</string>
    <string name="pet_birth_date">Birth</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="kind">Kind</string>
    <string name="breed">Breed</string>
    <string name="breed_etc">Other varieties</string>
    <string name="weight">Weight</string>
    <string name="neutralization">Neutralization operation</string>
    <string name="additional_info">Pet additional information</string>
    <string name="basic_vaccination">Basic vaccination</string>
    <string name="walk_count">Number of walks(7day standard)</string>
    <string name="defication_count">Number of bowel movements(1day standard)</string>
    <string name="urination_count">Urine frequency(1day standard)</string>
    <string name="input_name">Please enter the name of the pet.</string>
    <string name="select_kind">Please select the pet kind.</string>
    <string name="input_birth_date">Please enter the date of your pet’s birth.</string>
    <string name="input_weight">Please enter the pet weight.</string>
    <string name="select_breed">Please select a breed of pet.</string>
    <string name="dialog_pet_type">Pet kind</string>
    <string name="dialog_dog_breed">Dog breed</string>
    <string name="dialog_cat_breed">Cat breed</string>
    <string name="answer11">Unknown</string>
    <string name="answer12">Not yet</string>
    <string name="answer13">Just got</string>
    <string name="answer14">Done</string>
    <string name="answer21">1time</string>
    <string name="answer22">2~3times</string>
    <string name="answer23">4~5times</string>
    <string name="answer24">Everyday</string>
    <string name="answer31">Unknown</string>
    <string name="answer32">1time</string>
    <string name="answer33">2~4times</string>
    <string name="answer34">Over 5</string>
    <string name="answer41">Unknown</string>
    <string name="answer42">1time</string>
    <string name="answer43">2~4times</string>
    <string name="answer44">Over 5</string>
    <string name="pet_delete">Are you sure you want to delete the selected pet?</string>
    <string name="pet_add">Your pet registration is complete.</string>
    <string name="pet_modify">Your pet modification is complete.</string>
    <string name="pet_type_dog">dog</string>
    <string name="pet_type_cat">cat</string>
    <string name="dog_golden_retriever">golden retriever</string>
    <string name="dog_greyhound">greyhound</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_add_pet">Pet add</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_customer_center">Customer service</string>
    <string name="menu_privacy">Privacy statement</string>
    <string name="menu_service_terms">Terms of Service</string>
    <string name="menu_home">Home</string>
    <string name="setting_update_nest">It will be reflected in the next update.</string>
    <string name="menu_logout">Do you want to log out?</string>
    <string name="profile">Profile</string>
    <string name="registered_pet">Registered pet</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="setting">Setting</string>
    <string name="login">Login</string>
    <string name="auto_login">Auto login</string>
    <string name="notice">Notice</string>
    <string name="schedule_notice">Test scheduled notice</string>
    <string name="other">etc</string>
    <string name="delete_test_history">Delete test record</string>
    <string name="app_info">App information</string>
    <string name="current_version">Version</string>
    <string name="latest_version">Updated version.</string>
    <string name="withdrawal">Membership Withdrawal</string>
    <string name="hi_alphacare">Welcome.\nto Alpha Care.</string>
    <string name="login_msg">Please login.</string>
    <string name="email_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="change_password_msg">Please enter below to reset your password.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirm">Re-check the new password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="result_check_dialog">Are all the squares on the strips matched to the results??</string>
</resources>