<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <!-- 자동로그인 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:textSize="14dp"
                android:textColor="@color/colorBlack"
                android:gravity="center_vertical"
                android:text="@string/auto_login"
                android:layout_marginLeft="10dp"/>
            <Switch
                android:id="@+id/switchLogin"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:track="@drawable/switch_track_selector"
                android:thumb="@drawable/switch_thumb"
                android:layout_marginRight="20dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/new_gray_3"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="14dp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/schedule_notice"
                    android:layout_marginLeft="10dp"/>
                <Switch
                    android:id="@+id/switchTestAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:track="@drawable/switch_track_selector"
                    android:thumb="@drawable/switch_thumb"
                    android:layout_marginRight="20dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/new_gray_3"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:textSize="14dp"
                android:textColor="@color/colorBlack"
                android:layout_centerVertical="true"
                android:text="@string/delete_test_history"/>
            <TextView
                android:id="@+id/tv_btn_del_record"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/round_button_pink"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/colorWhite"
                android:textSize="14dp"
                android:layout_marginRight="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/new_gray_3"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="14dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/new_gray_1"/>
            <TextView
                android:id="@+id/txtUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="12dp"
                android:textColor="@color/new_gray_1"
                android:text="@string/latest_version"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>
        <!-- 자동로그인 end -->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_line"
            android:orientation="vertical">


            <!-- 회원탈퇴 -->
            <!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="bottom"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#f3f3f3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="15sp"
                    android:textColor="#4686df"
                    android:text="@string/withdrawal"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#f3f3f3"/>
            </LinearLayout>-->

        </LinearLayout>
    </LinearLayout>
</LinearLayout>