<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/background_menu_top">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="23dp"
            android:textSize="18sp"
            android:textColor="#deffffff"
            android:text="Alpha Care"/>
        <TextView
            android:id="@+id/txtBirthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="23dp"
            android:textSize="14sp"
            android:textColor="#deffffff"
            android:text="ihji2001@naver.com"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lvMenuList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:scrollbars="vertical"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/background_tab"
        android:gravity="bottom"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnShowMenu"
            android:visibility="invisible">
            <TextView
                android:id="@+id/txtTabOneTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="5sp"
                android:textColor="#77869e"
                android:textSize="10sp"
                android:text="@string/tab_menu"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_above="@+id/txtTabOneTitle"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tab_menu"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnShowTestResult"
            android:visibility="invisible">
            <TextView
                android:id="@+id/txtTabTwoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="5sp"
                android:textColor="#77869e"
                android:textSize="10sp"
                android:text="@string/tab_result"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_above="@+id/txtTabTwoTitle"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tab_result_off"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnGoHome">
            <TextView
                android:id="@+id/txtTabThreeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="5sp"
                android:textColor="#77869e"
                android:textSize="10sp"
                android:text="@string/tab_home"/>

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_above="@+id/txtTabThreeTitle"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tab_go_home"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnDeletePet"
            android:visibility="invisible">
            <TextView
                android:id="@+id/txtTabFourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="5sp"
                android:textColor="#77869e"
                android:textSize="10sp"
                android:text="@string/tab_modify"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_above="@+id/txtTabFourTitle"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tab_modify_off"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnGoHome"
            android:visibility="invisible">
            <TextView
                android:id="@+id/txtTabFiveTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="5sp"
                android:textColor="#77869e"
                android:textSize="10sp"
                android:text="@string/tab_home"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_above="@+id/txtTabFiveTitle"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tab_home_off"/>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>